# carte-etoile

./: .dockerignore  .env.template  .gitignore  .gwtconfig  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yaml
.sqlx/: query-00f865372136c5fca4b12ca7ec477cdad58096f1b40d9883ce1060864c433b9b.json  query-0e771e4af789288ef1fdbca467e7ebba48be935a1ea8572e6b7bfe03a4285863.json  query-3acbc78031c708fea042dfe5f1f4b57fdffcc70bafa43096be73b857220d9a91.json  query-565988119ac0009f526125961363a8a720f20aa1b1d0110d31715f175844b600.json  query-6035a21ee714fa789ee201e5020eea233bce993b7bd7504c9dda84edc8bda9a6.json  query-642eaf6c0e1b3dd22c3cbe764531bf490024564b11e25750910010ca7fb09c49.json  query-67105bb1ffc75cf86d0215e67b9c8eb550703f3b543f94b2494c766d2c4efe04.json  query-685c087f7e76fd0842aed647001343f698cd035fcc8ccb13b9fb3f5c14baeb32.json  query-699899d01713c629131287cccfbcf7e668900a9da333f7a8995399be10072ed8.json  query-7769409fa2eed6d0fc6c2a7d075180ad5759f66bf00891878a3db45a6d207f16.json  query-83f6425be790b2755d18ceb2752428f56f7a104b31a280225e49c8bae7bfcf3c.json  query-a8e10ab08789202298bd9f69b10f501189e242e6c6ee8db57c03f1546ffa7fb7.json  query-ad516a610efc1b01fd30da46fffe863786f8a7869866ab2333802c0320c53fdb.json  query-b63b11710eced4f2ffc63e0e191df957b5e7652fd6c8a01388f5d27d8b902cc3.json  query-be62a6935be2c2d9442e887b35f04c2c7bc2acc141da83d8f0d03595758debc2.json  query-c81e2665e0c31212897fb29f79362510b80607a38c104b4f342a0229e09ca494.json  query-de483639adad1753ffda9190b3986a400c7d569d3e7562bb98ab3787bb0290b9.json  query-de8ac018ca9e1dd3b9a7d161eb1e0ba9f32606f115c3dfed842aba8d79cfc6a8.json  query-e1e843e6167119ca2ae42b9357aa6018665fefe685fe6493815d974e7d6a6e43.json  query-e9cdfaf497eed8ba5b29a967b588e0a041270cdaac8ad14dc6888d66c3a4d17a.json  query-f6ddf50ee44189293d26457209a445f0848d2f06d0e6e2664a5b4753018524d5.json  query-ff3fed1a7178128fdc8302e912f906e418d14b0de228ba81708c929dcbda274b.json
business-ui/: package.json  vite.config.ts
business-ui/src/: App.tsx  main.tsx
business-ui/src/api/: index.ts
business-ui/src/components/: Navbar.tsx  PassDetails.tsx  QrScanner.tsx
business-ui/src/pages/: HomePage.tsx  PassPage.tsx  ScanPage.tsx
migrations/: 20240422101323_add_passes_and_devices.down.sql  20240422101323_add_passes_and_devices.up.sql
src/: error.rs  lib.rs  trace.rs  wallet.rs
src/api/: mod.rs
src/app/: apple.rs  config.rs  loyality_pass.rs  mod.rs  pass.rs  passes.rs
src/apple/: mod.rs  router.rs
src/apple/apn/: mod.rs
src/apple/extractors/: auth.rs  logs.rs  mod.rs  registration.rs
src/apple/handler/: device_deregistration.rs  device_registration.rs  log.rs  mod.rs  passes.rs
src/apple/webhook_server/: mod.rs  router.rs
src/apple/webhook_server/extractors/: auth.rs  logs.rs  mod.rs  registration.rs
src/apple/webhook_server/handler/: device_deregistration.rs  device_registration.rs  get_pass.rs  log.rs  mod.rs  passes.rs  updatable_passes_list.rs
src/apple/webhook_server/middleware/: auth.rs  mod.rs
src/db/: mod.rs  queries.rs
src/db/models/: device_pass_registrations.rs  devices.rs  mod.rs  passes.rs
src/http/: client_error.rs  docs.rs  mod.rs  router.rs
src/http/handler/: create_pass.rs  health.rs  mod.rs
src/http/handler/admin/: get_loyality_card.rs  loyality_add_points.rs  loyality_redeem_bonus.rs  mod.rs
src/http/middleware/: mod.rs  oic_auth.rs  oidc_auth.rs  request_tracing.rs
src/image/: mod.rs
src/utils/: env.rs
src/wallet/: mod.rs
src/wallet_webhook/: mod.rs
src/wallet_webhook/extractors/: auth.rs  mod.rs  registration.rs
src/wallet_webhook/handler/: log.rs  mod.rs  registration.rs
