[package]
name = "carte-etoile"
version = "0.1.0"
edition = "2021"
authors = ["dattito"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a2 = {version="0.10", features=["tracing"] } 

axum = { version = "0.8", features = ["tracing", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
chrono = "0.4"
dotenvy = "0.15"
envy = "0.4"
fastrand = "2.1"
futures = "0.3"
image = "0.25"
indexmap = "2.2"
oidc-jwt-validator = "0.2"
openssl = "0.10"
passes = "1.0"
reqwest11 = {version="0.11", package="reqwest"} # must be 0.11
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3.14", features = ["chrono"] }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio" ] }
thiserror = "2.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.8", features = ["v7", "serde"] }
